--- a/SeleniumPractice/test-output/index.html
+++ b/SeleniumPractice/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\vinAY.kumars\AppData\Local\Temp\testng-eclipse--431430721\testng-customsuite.xml</span>
+                    <span>C:\Users\vinAY.kumars\AppData\Local\Temp\testng-eclipse--1625353423\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods,   3 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,17 +104,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.testing.TestNGsample" class="method navigator-link" hash-for-method="click">click</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.testing.TestNGsample" class="method navigator-link" hash-for-method="load">load</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.testing.TestNGsample" class="method navigator-link" hash-for-method="verifyLink">verifyLink</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.testing.FacebookLogin" class="method navigator-link" hash-for-method="fbLogin">fbLogin</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -132,28 +122,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.testing.TestNGsample</span>
+              <span class="class-name">com.testing.FacebookLogin</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="click">
-                  </a> <!-- click -->
-                  <span class="method-name">click</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="load">
-                  </a> <!-- load -->
-                  <span class="method-name">load</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="verifyLink">
-                  </a> <!-- verifyLink -->
-                  <span class="method-name">verifyLink</span>
+                  <a name="fbLogin">
+                  </a> <!-- fbLogin -->
+                  <span class="method-name">fbLogin</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -161,7 +137,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\vinAY.kumars\AppData\Local\Temp\testng-eclipse--431430721\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\vinAY.kumars\AppData\Local\Temp\testng-eclipse--1625353423\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -170,7 +146,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.testing.TestNGsample&quot;/&gt;
+      &lt;class name=&quot;com.testing.FacebookLogin&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -210,24 +186,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(3);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'click')
-data.setCell(0, 2, 'com.testing.TestNGsample')
-data.setCell(0, 3, 2946);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'verifyLink')
-data.setCell(1, 2, 'com.testing.TestNGsample')
-data.setCell(1, 3, 12);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'load')
-data.setCell(2, 2, 'com.testing.TestNGsample')
-data.setCell(2, 3, 8);
+data.setCell(0, 1, 'fbLogin')
+data.setCell(0, 2, 'com.testing.FacebookLogin')
+data.setCell(0, 3, 674);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 2 seconds</span>
+              <span class="suite-total-time">Total running time: 674 ms</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -253,26 +221,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.testing.TestNGsample</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.testing.FacebookLogin</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
-                <span class="method-name">launch</span>
+                <span class="method-name">launchBrowser</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
-                <span class="method-name">load</span>
-                <span class="method-start">14619 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">click</span>
-                <span class="method-start">14634 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">verifyLink</span>
-                <span class="method-start">17584 ms</span>
+                <span class="method-name">fbLogin</span>
+                <span class="method-start">5746 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
-                <span class="method-name">close</span>
-                <span class="method-start">17601 ms</span>
+                <span class="method-name">closeBrowser</span>
+                <span class="method-start">6425 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
