--- a/SeleniumPractice/test-output/old/Default suite/methods.html
+++ b/SeleniumPractice/test-output/old/Default suite/methods.html
@@ -1,14 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b9a598">  <td>22/02/18 14:42:15</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TestNGsample.launch()[pri:0, instance:com.testing.TestNGsample@66d3eec0]">&gt;&gt;launch</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1293241549</td>   <td></td> </tr>
-<tr bgcolor="b9a598">  <td>22/02/18 14:42:29</td>   <td>14629</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNGsample.click()[pri:2, instance:com.testing.TestNGsample@66d3eec0]">click</td> 
-  <td>main@1293241549</td>   <td></td> </tr>
-<tr bgcolor="b9a598">  <td>22/02/18 14:42:29</td>   <td>14614</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNGsample.load()[pri:1, instance:com.testing.TestNGsample@66d3eec0]">load</td> 
-  <td>main@1293241549</td>   <td></td> </tr>
-<tr bgcolor="b9a598">  <td>22/02/18 14:42:32</td>   <td>17579</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNGsample.verifyLink()[pri:3, instance:com.testing.TestNGsample@66d3eec0]">verifyLink</td> 
-  <td>main@1293241549</td>   <td></td> </tr>
-<tr bgcolor="b9a598">  <td>22/02/18 14:42:32</td>   <td>17597</td> <td>&nbsp;</td><td title="&lt;&lt;TestNGsample.close()[pri:0, instance:com.testing.TestNGsample@66d3eec0]">&lt;&lt;close</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1293241549</td>   <td></td> </tr>
+<tr bgcolor="94f96a">  <td>22/02/19 00:12:10</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FacebookLogin.fbLogin()[pri:2, instance:com.testing.FacebookLogin@1af2d44a]">fbLogin</td> 
+  <td>main@1400856767</td>   <td></td> </tr>
+<tr bgcolor="94f96a">  <td>22/02/19 00:12:04</td>   <td>-5741</td> <td>&nbsp;</td><td title="&gt;&gt;FacebookLogin.launchBrowser()[pri:0, instance:com.testing.FacebookLogin@1af2d44a]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1400856767</td>   <td></td> </tr>
+<tr bgcolor="94f96a">  <td>22/02/19 00:12:10</td>   <td>679</td> <td>&nbsp;</td><td title="&lt;&lt;FacebookLogin.closeBrowser()[pri:0, instance:com.testing.FacebookLogin@1af2d44a]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1400856767</td>   <td></td> </tr>
 </table>
